# MoE_RAG

./: .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CLOUD_GPU_GUIDE.md  CONVERSION_CHECKLIST.md  DEV_SETUP_COMPLETE.md  DeepSeekModelfile  Dockerfile.minimal  GITHUB_PUSH_COMPLETE.md  IMPLEMENTATION_GUIDE.md  MEMORY_MANAGEMENT_IMPROVEMENT.md  MOE_TRAINING_COMPLETE.md  MoE_RAG_README.md  OLLAMA_SOLUTION.md  QUANTIZATION_GUIDE.md  QUICK_COLAB_GUIDE.md  README.md  README_OLLAMA.md  SETUP_INFO.md  available_models.json  back_container_structure_inspector.sh  check_container_status.sh  cloud_gpu_conversion.py  complete_env_documenter.py  complete_env_setup.py  container_env_inspector.py  container_inspector_clean.sh  container_structure_inspector.sh  convert_finetuned_to_ollama_wsl.py  fix_docker.sh  fix_vector_dimensions.sh  fixed_model_config.json  implement_persistence.sh  implement_persistence_v2.sh  init_git.sh  install_ollama_wsl.sh  large_model_finetuning_example.py  manual_container_inspection.sh  (+28 more)
.serena/: project.yml
app/: dependencies.py  fixed_ewc_trainer.py  main.py  main_full.py  main_lightweight.py  main_unified.py  main_unified.py.bak  main_unified_docker.py  main_unified_improved.py  main_unified_lightweight.py  main_with_generation.py  memory_optimized_loader.py  memory_optimized_loader_v2.py  model_utils.py  moe_api.py  moe_rag_api.py  moe_rag_endpoints.py  moe_simple_ui.py  moe_training_endpoints.py  moe_web_ui.py  ollama_integration.py  rag_interface.py  simple_main.py
config/: continual_learning_config.yaml  deployed_moe.json  (+4 more)
(+486 files in other folders)
